# ascend

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/component/: alignLabel.cpp  alignable.cpp  boundingBox.cpp  hoverable.cpp  label.cpp  layerIndex.cpp  leftClickable.cpp  renderLayer.cpp  renderable.cpp  scale.cpp  sprite.cpp  text.cpp  textureSwitcher.cpp
src/core/: app.cpp  common.cpp  event.cpp  input.cpp  inputHandler.cpp  log.cpp  music.cpp  render.cpp  sound.cpp
src/include/component/: alignLabel.hpp  alignable.hpp  boundingBox.hpp  hoverable.hpp  label.hpp  layerIndex.hpp  leftClickable.hpp  renderLayer.hpp  renderable.hpp  scale.hpp  sprite.hpp  text.hpp  textureSwitcher.hpp
src/include/core/: app.hpp  common.hpp  component.hpp  entity.hpp  event.hpp  input.hpp  inputHandler.hpp  log.hpp  music.hpp  render.hpp  sound.hpp
src/include/interface/: attachment.hpp  listener.hpp  publisher.hpp  serialize.hpp  signal.hpp  subscriber.hpp  system.hpp
src/include/resource/: compositeTexture.hpp  font.hpp  jsonDocument.hpp  music.hpp  repeatingTexture.hpp  resource.hpp  resourceMgr.hpp  sound.hpp  textFile.hpp  texture.hpp  token.hpp
src/include/scene/: layer.hpp  menu.hpp  musicPlayer.hpp  optionSelector.hpp  parser.hpp  scene.hpp  sceneMgr.hpp
src/interface/: signal.cpp
src/resource/: compositeTexture.cpp  font.cpp  jsonDocument.cpp  music.cpp  repeatingTexture.cpp  resource.cpp  resourceMgr.cpp  sound.cpp  textFile.cpp  texture.cpp
src/scene/: musicPlayer.cpp  optionSelector.cpp  parser.cpp  scene.cpp  sceneMgr.cpp
